--- a/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -14,13 +14,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.0-preview.7.24251.11" />
+		<PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.1" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
+		<PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
 		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
 		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
 	</ItemGroup>
