--- a/ch16/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch16/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -11,19 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.1" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
   </ItemGroup>
   
   <ItemGroup>
