--- a/ch16/Codebreaker.BotQ/Codebreaker.BotQ.csproj
+++ b/ch16/Codebreaker.BotQ/Codebreaker.BotQ.csproj
@@ -8,12 +8,12 @@
   </PropertyGroup>
  
   <ItemGroup>
-	<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.0-preview.7.24251.11" />
-	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.0-preview.7.24251.11" />
+	<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
+	<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
+	<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
+	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
+	<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
+	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
 	<PackageReference Include="Azure.Identity" Version="1.11.3" />
 	<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
 	<PackageReference Include="Google.Protobuf" Version="3.26.1" />
