--- a/ch02/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
+++ b/ch02/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.6.0-beta.56" />
+    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.7.0" />
   </ItemGroup>
 
   <ItemGroup>
