--- a/ch05/FinalDocker/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch05/FinalDocker/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
