--- a/ch05/StartAspire/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch05/StartAspire/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -11,11 +11,11 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
     <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
-    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
