--- a/ch05/StartDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch05/StartDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
-    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
