--- a/ch07/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
+++ b/ch07/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
@@ -14,7 +14,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.5">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
