--- a/ch08/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
+++ b/ch08/Codebreaker.SqlServerMigration/Codebreaker.SqlServerMigration.csproj
@@ -17,7 +17,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
 		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
 	</ItemGroup>
 
