--- a/ch11/Codebreaker.GameAPIs.Client/Codebreaker.GameAPIs.Client.csproj
+++ b/ch11/Codebreaker.GameAPIs.Client/Codebreaker.GameAPIs.Client.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
     <PackageTags>
-      Codebreaker;CNinnovation;GamesClient;
+      Codebreaker;CNinnovation;GamesClient
     </PackageTags>
     <Description>
       This library contains client code to access the Codebreaker Games APIp. Reference this library to create a client application to access the Codebreaker Games API.
@@ -23,11 +23,11 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net7.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net8.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
