--- a/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch13/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -22,7 +22,7 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.26" />
+		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="8.0.5">
 		  <PrivateAssets>all</PrivateAssets>
@@ -30,8 +30,8 @@
 		</PackageReference>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.19" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
 	</ItemGroup>
 
 	<ItemGroup>
