--- a/ch14/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch14/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -13,8 +13,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.11.3" />
-		<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.24" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
+		<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 	</ItemGroup>
