--- a/ch14/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch14/Codebreaker.Live/Codebreaker.Live.csproj
@@ -13,8 +13,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.26" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
+    <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.5" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.2" />
