--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,47 +8,98 @@
   <!--Codebreaker Packages -->
   <ItemGroup>
     <PackageVersion Include="CNinnovation.Codebreaker.Analyzers" Version="3.7.1" />
+    <PackageVersion Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0"/>
+    <PackageVersion Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0"/>
+    <PackageVersion Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0"/>
+    <PackageVersion Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0"/>
   </ItemGroup>
 
+  <!-- OpenTelemetry Packages -->
   <ItemGroup>
-    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
     <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+    <PackageVersion Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.9.0-beta.2" />
     <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.0.0-rc9" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.9.0" />
-    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
-    <PackageVersion Include="Microsoft.Azure.Cosmos" Version="3.45.1" />
+  </ItemGroup>
+
+  <!-- .NET, Extensions, and ASP.NET Core Packages -->
+  <ItemGroup>
+    <PackageVersion Include="Google.Protobuf" Version="3.28.3"/>
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.67.0-pre1"/>
+    <PackageVersion Include="Grpc.Net.ClientFactory" Version="2.67.0-pre1"/>
+    <PackageVersion Include="Grpc.Tools" Version="2.67.0"/>
+
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.0"/>
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.0"/>
+    <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
+
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0" />
+
+    <PackageVersion Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.0.0" />
+
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0" />
   </ItemGroup>
 
-  <!-- Integration Packages -->
+  <!-- Azure Packages -->
   <ItemGroup>
+    <PackageVersion Include="Azure.Identity" Version="1.13.1" />
+    <PackageVersion Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0"/>
+    <PackageVersion Include="Microsoft.Azure.Cosmos" Version="3.45.1" />
+    <PackageVersion Include="Microsoft.Azure.SignalR" Version="1.28.0"/>
+    <PackageVersion Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="8.0.0" />
+  </ItemGroup>
+
+  <!-- Aspire Integration Packages -->
+  <ItemGroup>
+
+    <PackageVersion Include="Aspire.Azure.Messaging.EventHubs" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Azure.Storage.Queues" Version="9.0.0"/>
+
+    <PackageVersion Include="Aspire.Confluent.Kafka" Version="9.0.0"/>
 	<PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.0" />
 	<PackageVersion Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageVersion Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0"/>
   </ItemGroup>
 
-  <!-- Hosting Packages -->
+  <!-- Aspire Integration Hosting Packages -->
   <ItemGroup>
+
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.0.0" />
     <PackageVersion Include="Aspire.Hosting.Azure" Version="9.0.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0"/>
     <PackageVersion Include="Aspire.Hosting.Azure.CosmosDB" Version="9.0.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.EventHubs" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.Azure.SignalR" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.Azure.Sql" Version="9.0.0" />
+    <PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="9.0.0"/>
+
+    <PackageVersion Include="Aspire.Hosting.Kafka" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.RabbitMQ" Version="9.0.0"/>
+    <PackageVersion Include="Aspire.Hosting.Redis" Version="9.0.0"/>
     <PackageVersion Include="Aspire.Hosting.SqlServer" Version="9.0.0" />
+
   </ItemGroup>
 
   <!-- Testing -->
   <ItemGroup>
+    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
+    <PackageVersion Include="Microsoft.Extensions.Diagnostics.Testing" Version="9.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="xunit" Version="2.9.2" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
